--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "yup": "^1.7.0"
   },
